--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^1.0.16",
         "@vitejs/plugin-vue": "^4.6.2",
+        "canvas-confetti": "^1.9.3",
         "vue": "^3.4.26",
         "vue-loader": "^17.3.1",
         "vuetify": "^3.5.17"
